# mongocat

./: CMakeLists.txt  LICENSE  README.md
include/: getNumCores.h
src/: getNumCores.c  main.c  mongocatConfig.h.in
